--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body{
 }
 .main-nav{
     background-color: #E7E9FC;
+   
 }
 
 .web-studio{
@@ -16,6 +17,19 @@ body{
     font-family: var(--web-studio);
 }
 
+
+.part-one{
+    background-color: #2E2F42;
+}
+.part-one .main-title{
+    font-size: 56px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 6;
+}
+.button-one{
+    background-color: #4D5AE5 ;
+}
 ul{
     list-style-type: none;
 }
@@ -24,4 +38,3 @@ ul{
     --web-studio: "Raleway";
     --body-font-family: "Roboto";
 }
-
