--- a/css/styles.css
+++ b/css/styles.css
@@ -61,8 +61,26 @@ body{
 .section-title{
     text-align: center;
     font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--span-color);
 }
 
+.part-two-title{
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: var(--span-color);
+}
+
+
+.part-two-text{
+    line-height: 1.5;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+}
 .team h3{
     text-align: center;
 }
