--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ color: var(--span-color);
 }
 
 
-.button-one-page-two{
+.button-page-two{
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
