--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,7 @@ color: var(--span-color);
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color:var(--address-color);
+    color:var(--button-two-color);
     background-color: var(--button-bg-color);
 }
 
@@ -176,4 +176,5 @@ color: var(--span-color);
     --span-color: #2e2f42;
     --address-color: #434455;
     --button-bg-color: #f4f4fd;
+    --button-two-color: #4d5ae5;
 }
