--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,6 @@ body{
     
 }
 
-.main-nav{
-    background-color: #E7E9FC;
-   
-}
 
 .web-studio{
     text-transform: uppercase;
@@ -41,6 +37,7 @@ body{
     text-align: center;
     line-height: 1.07;
     letter-spacing: 0.02em;
+    font-weight: 700;
 }
 .button-one{
     background-color: #4D5AE5 ;
@@ -65,6 +62,7 @@ body{
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--span-color);
+    font-weight: 700;
 }
 
 .part-two-title{
@@ -73,6 +71,7 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: var(--span-color);
+font-weight: 500;
 }
 
 
@@ -80,6 +79,7 @@ color: var(--span-color);
     line-height: 1.5;
     font-size: 16px;
     letter-spacing: 0.02em;
+    font-weight: 400;
 }
 
 .team{
@@ -114,6 +114,7 @@ color: var(--span-color);
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--address-color);
+    font-weight: 400;
 }
 
 .studio-nav{
@@ -158,6 +159,7 @@ color: var(--span-color);
     color: #F4F4FD;
     letter-spacing: 0.02em;
     line-height: 1.5;
+    font-weight: 400;
 }
 
 
